<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mandeep.SunriseActivity"
    android:background="@drawable/background_gradient">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F55459"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name" />

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:hint="@string/latitude_hint" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeInput"
        android:layout_marginTop="16dp"
        android:hint="@string/longitude_hint" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeInput"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="13dp"
        android:onClick="onLookupButtonClick"
        android:text="@string/lookup" />

    <TextView
        android:id="@+id/textViewSunrise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lookupButton"
        android:layout_marginTop="16dp"
        android:text="@string/sunrise"
        android:textColor="@android:color/black"
        android:textSize="16sp" />




    <TextView
        android:id="@+id/textViewSunset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSunrise"
        android:layout_marginTop="8dp"
        android:text="@string/sunset"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/showAlertDialogButton"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSunset"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:onClick="showAlertDialog"
        android:text="@string/show_alert_dialog" />

    <Button
        android:id="@+id/showToastButton"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/showAlertDialogButton"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_toast" />


    <Button
        android:id="@+id/showSnackbarButton"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/showToastButton"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/show_snackbar" />

    <Button
        android:id="@+id/saveToFavoritesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/showSnackbarButton"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="11dp"
        android:onClick="onSaveToFavoritesClicked"
        android:text="Save to Favorites" />

    <Button
        android:id="@+id/showFavoritesButton"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveToFavoritesButton"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:onClick="showFavorites"
        android:text="View Favorites" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveToFavoritesButton"
        android:layout_marginTop="82dp" />
</RelativeLayout>
