<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FavoritesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/favoritesToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F55459"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Favorites"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="deleteAllFavorites"
            android:text="Delete All" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- The snackbar_container is moved to be the last child within the LinearLayout,
         as LinearLayout does not support aligning child views relative to the parent. -->
    <View
        android:id="@+id/snackbar_container"
        android:layout_width="423dp"
        android:layout_height="143dp" />

</LinearLayout>
