<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Latitude" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Longitude"
        android:layout_below="@id/latitudeInput" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lookup"
        android:layout_below="@id/longitudeInput"
        android:onClick="onLookupButtonClick" />

    <TextView
        android:id="@+id/textViewSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lookupButton"
        android:text="Sunrise Time" />

    <TextView
        android:id="@+id/textViewSunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSunrise"
        android:text="Sunset Time" />


</RelativeLayout>
